# OkWifi

./: .gitignore  BleProv.h  CMakeLists.txt  ProvServer.cc  ProvServer.h  README.md  idf_component.yml  partitions.csv  sdkconfig
main/: BleProv.cc  BleProv.h  CMakeLists.txt  Kconfig.projbuild  OkWifi.cc  OkWifi.h  ProvClient.cc  ProvClient.h  ProvServer.cc  ProvServer.h  ProvServerScanner.cc  ProvServerScanner.h  Tools.cc  Tools.h  WifiProv.cc  WifiProv.h  idf_component.yml  main.cc
